--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
     <p>We may update this policy from time to time. Continued use of Globul after changes are posted means you accept the updated terms.</p>
 
     <h2>Contact</h2>
-    <p>If you have questions about this policy, contact us at: <a href="mailto:support@globul.example">support@globul.example</a></p>
+    <p>If you have questions about this policy, contact us at: <a href="mailto:support@globul.org">support@globul.org</a></p>
 
     <footer>
         &copy; 2025 Globul. All rights reserved.
