--- a/classroom.html
+++ b/classroom.html
@@ -1,173 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Classroom Chat</title>
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/4f/Google_Classroom_logo.svg" type="image/svg+xml">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f1f3f4;
-      margin: 0;
-      padding: 0;
-    }
-    .header {
-      background-color: #1e8e3e;
-      color: white;
-      padding: 10px 20px;
-      display: flex;
-      align-items: center;
-    }
-    .header img {
-      width: 24px;
-      height: 24px;
-      margin-right: 10px;
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 18px;
-    }
-    .chat-container {
-      max-width: 600px;
-      margin: 20px auto;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-    }
-    .messages {
-      padding: 20px;
-      max-height: 400px;
-      overflow-y: auto;
-    }
-    .message {
-      margin-bottom: 15px;
-      display: flex;
-      align-items: flex-start;
-    }
-    .message img {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
-    .message .content {
-      background-color: #e8f5e9;
-      padding: 10px;
-      border-radius: 8px;
-      max-width: 80%;
-    }
-    .message .content.user {
-      background-color: #c8e6c9;
-    }
-    .input-container {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-    }
-    .input-container input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-    .input-container button {
-      background-color: #1e8e3e;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      margin-left: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    .input-container button:disabled {
-      background-color: #b2dfdb;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Google Classroom Chat</title>
+<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/4f/Google_Classroom_logo.svg" type="image/svg+xml">
+<style>
+body{margin:0;padding:0;font-family:Roboto,sans-serif;background:#f1f3f4}
+.header{background:#1e8e3e;color:white;display:flex;align-items:center;padding:10px 20px}
+.header img{width:24px;height:24px;margin-right:10px}
+.header h1{margin:0;font-size:18px}
+.chat-container{max-width:600px;margin:20px auto;background:white;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);overflow:hidden}
+.messages{padding:20px;max-height:400px;overflow-y:auto}
+.message{margin-bottom:15px;display:flex;align-items:flex-start}
+.message img{width:32px;height:32px;border-radius:50%;margin-right:10px}
+.message .content{background:#e8f5e9;padding:10px;border-radius:8px;max-width:80%;word-wrap:break-word}
+.message .content.user{background:#c8e6c9}
+.input-container{display:flex;padding:10px;border-top:1px solid #ddd}
+.input-container input{flex:1;padding:10px;border:1px solid #ddd;border-radius:8px;font-size:14px}
+.input-container button{background:#1e8e3e;color:white;border:none;padding:10px 15px;margin-left:10px;border-radius:8px;cursor:pointer}
+.input-container button:disabled{background:#b2dfdb}
+</style>
 </head>
 <body>
 
-  <div class="header">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Google_Classroom_logo.svg" alt="Google Classroom">
-    <h1>Google Classroom</h1>
+<div class="header">
+<img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Google_Classroom_logo.svg" alt="Google Classroom">
+<h1>Google Classroom</h1>
+</div>
+
+<div class="chat-container">
+  <div class="messages" id="messages"></div>
+  <div class="input-container">
+    <input type="text" id="userInput" placeholder="Type a message..." oninput="toggleSendButton()">
+    <button id="sendButton" onclick="sendMessage()" disabled>Send</button>
   </div>
+</div>
 
-  <div class="chat-container">
-    <div class="messages" id="messages"></div>
-    <div class="input-container">
-      <input type="text" id="userInput" placeholder="Type a message..." oninput="toggleSendButton()">
-      <button id="sendButton" onclick="sendMessage()" disabled>Send</button>
-    </div>
-  </div>
+<script>
+const messagesContainer = document.getElementById('messages');
+const userInput = document.getElementById('userInput');
+const sendButton = document.getElementById('sendButton');
+const conversation = [];
 
-  <script>
-    const messagesContainer = document.getElementById('messages');
-    const userInput = document.getElementById('userInput');
-    const sendButton = document.getElementById('sendButton');
+function toggleSendButton(){ sendButton.disabled = !userInput.value.trim() }
 
-    const conversation = [];
+function addMessage(content,sender='bot',avatar='bot'){
+  const messageElement=document.createElement('div');
+  messageElement.classList.add('message');
+  messageElement.innerHTML=`<img src="https://i.pravatar.cc/150?img=${avatar==='bot'?1:2}" alt="${sender}">
+    <div class="content ${sender==='user'?'user':''}"><p>${content}</p></div>`;
+  messagesContainer.appendChild(messageElement);
+  messagesContainer.scrollTop=messagesContainer.scrollHeight;
+}
 
-    function toggleSendButton() {
-      sendButton.disabled = !userInput.value.trim();
-    }
+function humanizeText(text){
+  text=text.replace(/[—,\-;'\*]/g,''); // remove punctuation
+  text=text.replace(/\b(I|The|That|And|You)\b/g,()=>Math.random()<0.15?text.toLowerCase():text); // randomly lowercase
+  text=text.replace(/\b(the|and|that)\b/gi,()=>Math.random()<0.05?'':text); // sometimes remove small words
+  if(Math.random()<0.15 && text.length>1){text=text[0].toLowerCase()+text.slice(1);}
+  return text;
+}
 
-    function addMessage(content, sender = 'bot', avatar = 'bot') {
-      const messageElement = document.createElement('div');
-      messageElement.classList.add('message');
-      messageElement.innerHTML = `
-        <img src="https://i.pravatar.cc/150?img=${avatar === 'bot' ? 1 : 2}" alt="${sender}">
-        <div class="content ${sender === 'user' ? 'user' : ''}">
-          <p>${content}</p>
-        </div>
-      `;
-      messagesContainer.appendChild(messageElement);
-      messagesContainer.scrollTop = messagesContainer.scrollHeight;
-    }
+async function sendMessage(){
+  const userText=userInput.value.trim();
+  if(!userText) return;
+  addMessage(userText,'user','user');
+  conversation.push({role:'user',text:userText});
+  userInput.value=''; toggleSendButton();
 
-    function humanizeText(text) {
-      const imperfections = [
-        { regex: /\bI\b/g, replacement: () => Math.random() < 0.2 ? 'i' : 'I' },
-        { regex: /\bthe\b/g, replacement: () => Math.random() < 0.1 ? 'teh' : 'the' },
-        { regex: /\byou\b/g, replacement: () => Math.random() < 0.1 ? 'u' : 'you' },
-        { regex: /([a-zA-Z])\1+/g, replacement: (match) => match.charAt(0) + match.charAt(0) },
-      ];
+  const typingDiv=document.createElement('div');
+  typingDiv.className='message bot';
+  typingDiv.id='typing';
+  typingDiv.innerHTML=`<img src="https://i.pravatar.cc/150?img=1"><div class="content">...</div>`;
+  messagesContainer.appendChild(typingDiv);
+  messagesContainer.scrollTop=messagesContainer.scrollHeight;
 
-      imperfections.forEach(({ regex, replacement }) => {
-        text = text.replace(regex, replacement);
-      });
-
-      return text;
-    }
-
-    function sendMessage() {
-      const userText = userInput.value.trim();
-      if (!userText) return;
-
-      addMessage(userText, 'user', 'user');
-      conversation.push({ sender: 'user', text: userText });
-
-      userInput.value = '';
-      toggleSendButton();
-
-      const botResponse = generateBotResponse(userText);
-      addMessage(botResponse, 'bot');
-      conversation.push({ sender: 'bot', text: botResponse });
-    }
-
-    function generateBotResponse(userText) {
-      const responses = [
-        "Hey, how's it going?",
-        "What's up?",
-        "Hello there!",
-        "Hi, how can I assist you today?",
-        "Hey! Need help with something?",
-      ];
-
-      return humanizeText(responses[Math.floor(Math.random() * responses.length)]);
-    }
-  </script>
-
+  try{
+    const url=`https://text.pollinations.ai/${encodeURIComponent(userText)}`;
+    const res=await fetch(url);
+    let botText;
+    if(res.ok){ botText=await res.text(); botText=humanizeText(botText); }
+    else botText='cant connect right now';
+    conversation.push({role:'bot',text:botText});
+    typingDiv.remove();
+    addMessage(botText,'bot','bot');
+  }catch(e){
+    typingDiv.remove();
+    addMessage('cant connect right now','bot','bot');
+    console.error(e);
+  }
+}
+</script>
 </body>
 </html>
